--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = "1.2.40"
+    ext.kotlin_version = "1.2.41"
 
     repositories {
         mavenCentral()
@@ -29,7 +29,8 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    compile 'com.github.Redrield:SaturnShell:0.0.1'
+//    compile 'com.github.Redrield:SaturnShell:0.0.5-command'
+    compile files("libs/saturnshell.jar")
 
     compile wpilib()
     compile ctre()
