--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = "1.2.60"
+    ext.kotlin_version = "1.2.61"
 
     repositories {
         mavenCentral()
@@ -31,7 +31,8 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 //    compile 'com.github.Redrield:SaturnShell:0.0.5-command'
     compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.24.0"
-    compile files("libs/saturnshell.jar")
+//    compile files("libs/saturnshell.jar")
+    compile project(":SaturnShell")
 
     compile wpilib()
     compile ctre()
@@ -48,8 +49,7 @@ deploy {
         artifact("frcJava", jaci.openrio.gradle.frc.FRCJavaArtifact) {
             targets << "roborio"
 
-
-            //debug = true
+//            debug = true
         }
     }
 }
