--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = "1.2.61"
+    ext.kotlin_version = "1.2.71"
 
     repositories {
         mavenCentral()
@@ -10,7 +10,7 @@ buildscript {
     }
 }
 plugins {
-    id "jaci.openrio.gradle.GradleRIO" version "2018.03.06"
+    id "edu.wpi.first.GradleRIO" version "2018.06.21"
 }
 
 def TEAM = 4069
@@ -41,12 +41,12 @@ dependencies {
 
 deploy {
     targets {
-        target("roborio", jaci.openrio.gradle.frc.RoboRIO) {
+        target("roborio", edu.wpi.first.gradlerio.frc.RoboRIO) {
             team = TEAM
         }
     }
     artifacts {
-        artifact("frcJava", jaci.openrio.gradle.frc.FRCJavaArtifact) {
+        artifact("frcJava", edu.wpi.first.gradlerio.frc.FRCJavaArtifact) {
             targets << "roborio"
 
 //            debug = true
@@ -56,7 +56,7 @@ deploy {
 
 jar {
     from configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-    manifest jaci.openrio.gradle.GradleRIOPlugin.javaManifest(ROBOT_CLASS)
+    manifest edu.wpi.first.gradlerio.GradleRIOPlugin.javaManifest(ROBOT_CLASS)
 }
 
 compileKotlin {
