Add src/main/kotlin to java source set

--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,14 @@ jar {
     manifest edu.wpi.first.gradlerio.GradleRIOPlugin.javaManifest(ROBOT_CLASS)
 }
 
+sourceSets {
+    main {
+        java {
+            srcDir "src/main/kotlin"
+        }
+    }
+}
+
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
