--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     compile wpilib()
     compile ctre()
     compile pathfinder()
+    compile openrio.powerup.matchData()
 }
 
 deploy {
